fix coverstaion

--- a/client-side/src/stories/GenericInput/genericInput.scss
+++ b/client-side/src/stories/GenericInput/genericInput.scss
@@ -1,7 +1,7 @@
 /* genericInput.scss */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import './style.scss';
-
+@import '../variables.scss';
 .generic-input {
   .MuiOutlinedInput-root {
     border-radius: 8px;
@@ -36,7 +36,7 @@
 
     input {
       color: $color-black;
-      font-family: 'Montserrat', sans-serif;
+      font-family: $fontfamily;
       font-weight: 400;
       font-size: 14px;
       transition: color 0.3s ease;
@@ -49,7 +49,7 @@
 
   .MuiFormLabel-root {
     color: $color-black;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $fontfamily;
     font-weight: 400;
     font-size: 16px;
     transition: color 0.3s ease;
@@ -61,7 +61,7 @@
 
   .MuiFormHelperText-root {
     color: $color-black;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $fontfamily;
     font-weight: 400;
     font-size: 12px;
     transition: color 0.3s ease;
@@ -82,7 +82,7 @@
     border-width: 1px;
     background-color:$color-border ;
     color: $color-black;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $fontfamily;
     &:hover {
       box-shadow: 0 0 5px rgba($color-border, 0.5);
       background-color:$color-border-hover ;
