--- a/client-side/src/stories/variables.scss
+++ b/client-side/src/stories/variables.scss
@@ -7,4 +7,5 @@ $primary-color: black;
 $secondary-color: rgb(103, 252, 210);
 $light-black: rgba(0, 0, 0, 0.1);
 $errorColor:red;
+$fontfamily:'Montserrat', sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
